; ModuleID = '/home/carl/AnghaBench/borg/src/borg/algorithms/zstd/lib/legacy/extr_zstd_v04.c_ZBUFFv04_decompressContinue.c'
source_filename = "/home/carl/AnghaBench/borg/src/borg/algorithms/zstd/lib/legacy/extr_zstd_v04.c_ZBUFFv04_decompressContinue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [28 x i8] c"ZBUFFv04_decompressContinue\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @ZBUFFv04_decompressContinue(i32* %0, i8* %1, i64* %2, i8* %3, i64* %4) #0 {
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i64*, align 8
  store i32* %0, i32** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64* %2, i64** %8, align 8
  store i8* %3, i8** %9, align 8
  store i64* %4, i64** %10, align 8
  %11 = call i32 @DEBUGLOG(i32 5, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str, i64 0, i64 0))
  %12 = load i32*, i32** %6, align 8
  %13 = load i8*, i8** %7, align 8
  %14 = load i64*, i64** %8, align 8
  %15 = load i8*, i8** %9, align 8
  %16 = load i64*, i64** %10, align 8
  %17 = call i64 @ZBUFF_decompressContinue(i32* %12, i8* %13, i64* %14, i8* %15, i64* %16)
  ret i64 %17
}

declare dso_local i32 @DEBUGLOG(i32, i8*) #1

declare dso_local i64 @ZBUFF_decompressContinue(i32*, i8*, i64*, i8*, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
